src/objects/Bitcoin_Query_Result__c.object
<CustomObject>
    <fields>
        <fullName>Background_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background Operation</label>
        <referenceTo>BackgroundOperation</referenceTo>
        <relationshipName>Bitcoin_Query_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <label>High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>Bitcoin Query Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bitcoin Query Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bitcoin Query Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>